# geo-uploader

./: .env.example  .flaskenv  .gitignore  LICENSE  Makefile  Readme.md  environment.yml  manage.py  pyproject.toml
documentation/: DevelopmentCommands.md  GEO_instructions.md
geo_uploader/: app.py  config.py  decorators.py  extensions.py
geo_uploader/dto/: __init__.py  file_info.py  sample_metadata.py  session_metadata.py  tar_info.py  tar_read_info.py
geo_uploader/forms/: __init__.py  auth_forms.py  main_forms.py  metadata_forms.py  profile_forms.py  progress_forms.py  session_forms.py
geo_uploader/models/: __init__.py  upload_sessions.py  user_constants.py  user_models.py
geo_uploader/services/: auth_service.py  excel_service.py  file_service.py  profile_service.py  sample_parser_service.py  sample_service.py  session_cache_service.py  session_upload_service.py
geo_uploader/static/handsontable/: handsontable.full.css
geo_uploader/static/javascript/metadata/: core.js  init.js  pairedend.js  protocol.js  samples.js  study.js  validators.js
geo_uploader/static/javascript/select_samples/: file_organizer.js
geo_uploader/static/javascript/upload/: folder_modality.js  new_session.js
geo_uploader/templates/auth/: email_verification_sent.html  register.html  resend_verification.html
geo_uploader/templates/layouts/: base.html  header.html
geo_uploader/templates/macros/: _flash_msg.html  _modal.html
geo_uploader/templates/main/: dashboard.html  landing.html  login.html  profile_details.html
geo_uploader/templates/metadata/: metadata.html  pairedend_handsontable.html  protocol_handsontable.html  samples_handsontable.html  study_handsontable.html
geo_uploader/templates/progress/: _progress_base.html  md5_progress.html  upload_progress.html
geo_uploader/templates/upload/: file_organizer.html  new_session.html
geo_uploader/utils/: constants.py  url_helpers.py  validators.py
geo_uploader/utils/metadata/: edit_metadata.py  seq_template.xlsx
geo_uploader/utils/upload_scripts/: bulk_md5.py  bulk_upload.py  run_python_with_config.py  run_python_with_config.sh
geo_uploader/utils/upload_scripts/utils/: __init__.py  config_parser.py  ftp.py  logger.py  md5.py  notify_server.py
geo_uploader/views/: __init__.py  auth_views.py  geo_views.py  main_views.py  metadata_views.py  profile.py  progress_views.py  upload_views.py
gstore/projects/raw_processed_paired/: samp1.txt  samp2.txt  samp3.txt  samp4.txt  samp5.txt  samp6.txt
migrations/versions/: 38b3b4fb85f3_synch_with_76523291.py  3c991ef8b34f_remove_password_field_add_remote_folder_.py  694da1b3310d_user_model_upgrade_for_email_password_.py  9f0c2f3c7ba8_uploads_removed_session_sushi_id_is_.py  ccd7db2ee135_adding_upload_folder_to_.py
scripts/: load_taxonomy.py
